[package]
name = "sshagmux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.4.0", default-features = false }
clap = { version = "4.3.3", default-features = false, features = ["color", "std", "wrap_help", "derive", "error-context", "cargo", "usage", "help", "suggestions"] }
color-eyre = { version = "0.6.2", default-features = false, features = ["capture-spantrace"] }
ctrlc = { version = "3.4.0", default-features = false, features = ["termination"] }
eyre = { version = "0.6.8", default-features = false }
fehler = { version = "1.0.0", default-features = false }
futures = { version = "0.3.28", default-features = false, features = ["std"] }
listenfd = { version = "1.0.1", default-features = false }
tokio = { version = "1.28.2", default-features = false, features = ["net", "rt", "time"] }
tokio-stream = { version = "0.1.14", default-features = false, features = ["net"] }
tokio-util = { version = "0.7.8", default-features = false, features = ["codec"] }
tracing = { version = "0.1.37", default-features = false, features = ["attributes", "std"] }
tracing-error = { version = "0.2.0", default-features = false }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt", "ansi", "tracing-log"] }
